lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__tests__any__fail_to_infer_type_of_case_expression_with_non_canonical_argument_type.snap
---
source: lib/ein/src/compile/type_inference/mod.rs
expression: "infer_types(&Module::from_definitions(vec![ValueDefinition ::\n                                           new(\"x\", Case ::\n                                               new(\"y\", None ::\n                                                   new(SourceInformation ::\n                                                       dummy()), vec !\n                                                   [Alternative ::\n                                                    new(types :: Any ::\n                                                        new(SourceInformation\n                                                            :: dummy()), None\n                                                        ::\n                                                        new(SourceInformation\n                                                            :: dummy()),) .\n                                                    into()], SourceInformation\n                                                   :: dummy()), types :: None\n                                               ::\n                                               new(SourceInformation ::\n                                                   dummy()), SourceInformation\n                                               :: dummy(),) . into()]))"
---
Err(
    TypesNotMatched(
        SourceInformation {
            source_name: "",
            location: Location {
                line_number: 0,
                column_number: 0,
            },
            line: "",
        },
        SourceInformation {
            source_name: "",
            location: Location {
                line_number: 0,
                column_number: 0,
            },
            line: "",
        },
    ),
)
