lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__tests__any__infer_any_types_from_union_of_concrete_type_and_any_type.snap
---
source: lib/ein/src/compile/type_inference/mod.rs
expression: "infer_types(&Module::from_definitions(vec![ValueDefinition ::\n                                           new(\"x\", Number ::\n                                               new(42.0, SourceInformation ::\n                                                   dummy()), types :: Any ::\n                                               new(SourceInformation ::\n                                                   dummy(),),\n                                               SourceInformation :: dummy(),)\n                                           . into(), ValueDefinition ::\n                                           new(\"y\", Let ::\n                                               new(vec !\n                                                   [ValueDefinition ::\n                                                    new(\"z\", If ::\n                                                        new(Boolean ::\n                                                            new(true,\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            Variable ::\n                                                            new(\"x\",\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            Number ::\n                                                            new(42.0,\n                                                                SourceInformation\n                                                                :: dummy()),\n                                                            SourceInformation\n                                                            :: dummy()), types\n                                                        :: Unknown ::\n                                                        new(SourceInformation\n                                                            :: dummy()),\n                                                        SourceInformation ::\n                                                        dummy(),) . into()],\n                                                   Number ::\n                                                   new(42.0, SourceInformation\n                                                       :: dummy()),), types ::\n                                               Number ::\n                                               new(SourceInformation ::\n                                                   dummy()), SourceInformation\n                                               :: dummy(),) . into()]))"
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            ValueDefinition(
                ValueDefinition {
                    name: "x",
                    body: Number(
                        Number {
                            value: 42.0,
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Any(
                        Any {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
            ValueDefinition(
                ValueDefinition {
                    name: "y",
                    body: Let(
                        Let {
                            definitions: [
                                ValueDefinition(
                                    ValueDefinition {
                                        name: "z",
                                        body: If(
                                            If {
                                                condition: Boolean(
                                                    Boolean {
                                                        value: true,
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                                then: Variable(
                                                    Variable {
                                                        name: "x",
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                                else_: Number(
                                                    Number {
                                                        value: 42.0,
                                                        source_information: SourceInformation {
                                                            source_name: "",
                                                            location: Location {
                                                                line_number: 0,
                                                                column_number: 0,
                                                            },
                                                            line: "",
                                                        },
                                                    },
                                                ),
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        type_: Any(
                                            Any {
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        source_information: SourceInformation {
                                            source_name: "",
                                            location: Location {
                                                line_number: 0,
                                                column_number: 0,
                                            },
                                            line: "",
                                        },
                                    },
                                ),
                            ],
                            expression: Number(
                                Number {
                                    value: 42.0,
                                    source_information: SourceInformation {
                                        source_name: "",
                                        location: Location {
                                            line_number: 0,
                                            column_number: 0,
                                        },
                                        line: "",
                                    },
                                },
                            ),
                        },
                    ),
                    type_: Number(
                        Number {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [],
    },
)
